Fixed some typos, added an useless button for showing the email.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Resume</title>
+<title>David Díaz</title>
 <body>
     
     <head>
@@ -8,7 +8,7 @@
 
     <div class ="textbox">
         <h1> José David García Díaz</h1>
-        <h3> Computer science undergraduate student/ Game development enthusiast / Mario 64 SpeedRunner</h3>
+        <h3> Computer science undergraduate student/ Game development enthusiast / Super Mario 64 SpeedRunner :)</h3>
     </div>
     <div>
         <img class="imagebox" src="resources\gameplay.gif" width="   600" height="340">
@@ -21,18 +21,20 @@
         <h1> About me</h1>
         <p>
         My name is José David García Díaz, I'm pursuing a bachelors in computer science in the Universidad Nacional Autónoma de México. I'm 26 years old and I live in Durango, México; 
-        I like playing and making games and making them. I spend a lot of time playing with the Unity Engine capacities, emulating mechanics from games that I like or testing things 
+        I like playing and making games. I spend a lot of time playing with the Unity Engine capacities, emulating mechanics from games that I like or testing things 
         that I would like in a videogame.
         </p>
-        <h2>
+        <button type="button" onclick="showMail()" >Contact me</button>
+        <h2 id="mail" style="display: none;">
             Contact: david_diaz@ciencias.unam.mx
         </h2>
+        <script src="jss\script.js"></script>
     </div>
 
     <div class = "textbox">
-        <h1> Play my games</h1>
+        <h1> Game development</h1>
         <p>
-            I started using the Monogame framework in 2016, but I switched to Unity, which has become my favorite engine and the one I feel more comfortable working on, but I also tried Godot and Unreal. In this page you can see a summary of my work or play some of my games in my Itch profile.
+            I started using the Monogame framework in 2016, but I switched to Unity, which has become my favorite engine and the one I feel more comfortable working on, but I also tried Godot and Unreal Engine. In this page you can see a summary of my work or play some of my games in my Itch profile.
         </p>
         <table>
             <tr>
