Added links to the game  subpages.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <link rel="stylesheet" href="css\estilo1.css">
     </head>
 
-    <div class ="textbox">
+    <section class ="textbox">
         <h1> José David García Díaz</h1>
-        <h3> Computer science undergraduate student/ Game development enthusiast / Super Mario 64 SpeedRunner :)</h3>
-    </div>
-    <div>
+        <p> Computer science undergraduate student/ Game development enthusiast / Super Mario 64 SpeedRunner :) </p>
+    </section>
+    <section>
         <img class="imagebox" src="resources\gameplay.gif" width="   600" height="340">
         <img class="imagebox" src="resources\protoGameplay.gif" width="   600" height="340">
         <img class="imagebox" src="resources\boxesGameplay.gif" width="   600" height="340">
         <img class="imagebox" src="resources\parallaxEffect.gif" width="   600" height="340">
-    </div>
+    </section>
 
     <div class ="textbox">
         <h1> About me</h1>
@@ -80,12 +80,8 @@
             <li>    
                 <a href="https://www.instagram.com/lakituskip/"> Instagram </a>
             </li>
-            <li>
-                <a href="https://www.twitch.tv/salmonlaferte"> Twitch </a>
-            </li>
         </ul>
 
     </div>
-    
     
 </body> 
