--- a/html/KOE.html
+++ b/html/KOE.html
@@ -7,7 +7,7 @@
    
     <div class="textbox">
         <h1>
-            Project KOE
+           <a href = "https://salmon64.itch.io/project-koe">Project KOE</a> 
         </h1>
         <p>
         Project KOE is the most ambicious game I've worked on, is a 2D platformer with gameplay inspired by Super Meat Boy and graphics inspired by Hollow Knight. I made this game and its assets all by myself with the exceptions of the sound effects and music (wich I have license to use them).
@@ -70,6 +70,9 @@
             <div>
                 <iframe frameborder="0" src="https://itch.io/embed/1101583?border_width=5&amp;bg_color=845e45&amp;fg_color=000000&amp;link_color=2b180b&amp;border_color=000000" width="560" height="175"><a href="https://salmon64.itch.io/project-koe">Project KOE by David Díaz</a></iframe>
             </div>
+        </p>
+        <p>
+            <a href="..\index.html"> Go back </a>
         </p>
     </div>
     
