--- a/html/runner.html
+++ b/html/runner.html
@@ -7,7 +7,7 @@
    
     <div class="textbox">
         <h1>
-            Kawaii  runner
+            <a href ="https://salmon64.itch.io/kawaii-runner">Kawaii  runner</a>
         </h1>
         <p>
             Kawaii runner is a mobile and browser game, this is a endless runner where the goal is to get the highest score posible.
@@ -18,6 +18,9 @@
             <div>
                 <iframe frameborder="0" src="https://itch.io/embed/321580?border_width=5&amp;bg_color=f5b3ee&amp;link_color=9a1b6a&amp;border_color=000000" width="560" height="175"><a href="https://salmon64.itch.io/kawaii-runner">Kawaii Runner by David Díaz</a></iframe>
             </div>
+        </p>
+        <p>
+            <a href="..\index.html"> Go back </a>
         </p>
     </div>
     
